--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.realitycollective.service-framework",
+  "name": "com.monodot.private.services",
   "displayName": "RealityCollective.Service-Framework",
   "description": "The Service Framework component for the Reality Toolkit by the Reality Collective.",
   "keywords": [
@@ -20,13 +20,14 @@
     "url": "https://github.com/realitycollective/com.realitycollective.service-framework.git"
   },
   "author": {
-    "name": "Reality Collective",
-    "email": "realitycollectivedev@gmail.com",
-    "url": "https://github.com/realitycollective"
+    "name": "monodot - Forks",
+    "email": "info@monodot.io",
+    "url": "https://www.monodot.io/"
   },
   "dependencies": {
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.addressables": "1.20.5",
-    "com.unity.ugui": "1.0.0"
+    "com.unity.ugui": "1.0.0",
+	"com.monodot.private.services-utilities": "1.0.10"
   }
 }
