--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.addressables": "1.20.5",
-    "com.unity.ugui": "1.0.0",
-	"com.monodot.private.services-utilities": "1.0.10"
+    "com.unity.ugui": "1.0.0"
   }
 }
